<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddToDoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color4"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="@dimen/header_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_label"
            android:textColor="@color/color4"
            android:textSize="@dimen/Text_Size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_tv" />

        <EditText
            android:id="@+id/title_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/margin_medium"
            android:ems="10"
            android:hint="@string/enter_title"
            android:minHeight="48dp"
            android:textSize="@dimen/entry_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_label" />

        <TextView
            android:id="@+id/desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/desc_label"
            android:textColor="@color/color4"
            android:textSize="@dimen/Text_Size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_entry" />

        <EditText
            android:id="@+id/desc_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/margin_medium"
            android:ems="10"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textSize="@dimen/entry_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_label" />


        <TextView
            android:id="@+id/priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/priority_label"
            android:textColor="@color/color4"
            android:textSize="@dimen/Text_Size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_entry" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority_label">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialRed"
                android:checked="true"
                android:text="@string/high_priority"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialOrange"
                android:text="@string/med_priority"
                android:theme="@style/WhiteRadioButton" />

            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/materialYellow"
                android:text="@string/low_priority"
                android:theme="@style/WhiteRadioButton" />

        </RadioGroup>


        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/due_date"
            android:textColor="@color/color4"
            android:textSize="@dimen/Text_Size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <EditText
            android:id="@+id/date_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/set_date"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="@dimen/entry_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/imgDate"
            android:layout_width="@dimen/calendar_img"
            android:layout_height="@dimen/calendar_img"
            android:src="@drawable/ic_event_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_edit"
            app:layout_constraintTop_toBottomOf="@+id/date_label"
            app:tint="@color/color4" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="@color/color4"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_task_button"
            android:textColor="@color/white"
            android:textSize="@dimen/entry_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>